syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Starfish.Web";

package fraud_checker;

service FraudChecker {
  rpc Check (TransactionDetailsRequest) returns (FraudReport);
}

message TransactionDetailsRequest {
  string sourceId = 1;
  string targetId = 2;
  double amount = 3;
  google.protobuf.Timestamp utcDate = 4;
}

message FraudReport {
  StatusTypes TransactionStatus = 1;

  enum StatusTypes {
    UNKNOWN = 0;
    VALID = 1;
    SUSPICIOUS = 3;
    FRAUD = 2;
  }
}
